# battlesnake

./: README.md  pyproject.toml  rule_based_methods.py
ppo_battlesnake_tb/PPO_1/: events.out.tfevents.1762686907.MathisP.12592.0
ppo_battlesnake_tb/PPO_10/: events.out.tfevents.1762962892.MathisP.12064.0
ppo_battlesnake_tb/PPO_11/: events.out.tfevents.1762963146.MathisP.33068.0
ppo_battlesnake_tb/PPO_12/: events.out.tfevents.1762963470.MathisP.28404.0
ppo_battlesnake_tb/PPO_13/: events.out.tfevents.1762963713.MathisP.40012.0
ppo_battlesnake_tb/PPO_14/: events.out.tfevents.1762963847.MathisP.34820.0
ppo_battlesnake_tb/PPO_15/: events.out.tfevents.1762964313.MathisP.18904.0
ppo_battlesnake_tb/PPO_16/: events.out.tfevents.1762964762.MathisP.13184.0
ppo_battlesnake_tb/PPO_2/: events.out.tfevents.1762689001.MathisP.14640.0
ppo_battlesnake_tb/PPO_3/: events.out.tfevents.1762717935.MathisP.32256.0
ppo_battlesnake_tb/PPO_4/: events.out.tfevents.1762718038.MathisP.9448.0
ppo_battlesnake_tb/PPO_5/: events.out.tfevents.1762957541.MathisP.37072.0
ppo_battlesnake_tb/PPO_6/: events.out.tfevents.1762957711.MathisP.41152.0
ppo_battlesnake_tb/PPO_7/: events.out.tfevents.1762957825.MathisP.18044.0
ppo_battlesnake_tb/PPO_8/: events.out.tfevents.1762958015.MathisP.8028.0
ppo_battlesnake_tb/PPO_9/: events.out.tfevents.1762962809.MathisP.42064.0
src/: __init__.py  duel_launcher.py  env.py  env_simulation.py  main.py  ppo.py  rule_based_methods.py  server.py  train.py  utils.py
src/agents/: human_snake.py  ppo_agent_snake.py  random_snake.py
src/envs/: env.py  (+2 more)
(+4 files in other folders)
